@@ -6,3 +6,4 @@ libez*_s.a
 libez*.so*
 configure-stamp
 build-stamp
+*~
