@@ -29,14 +29,28 @@ set_property(TARGET ezV24_shared APPEND PROPERTY
 )
 
 
+## Include directories usage requirements commonly differ between the build-tree
+## and the install-tree. The BUILD_INTERFACE and INSTALL_INTERFACE generator
+## expressions can be used to describe separate usage requirements based on the
+## usage location. Relative paths are allowed within the INSTALL_INTERFACE
+## expression and are interpreted relative to the installation prefix.
+##
+## If we only use one single relative path, Cmake will add the prefix to have a
+## absulote path at the time the compiler is called.
+##
 target_include_directories(ezV24_static
-PUBLIC include/ezV24
+PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/ezV24>
+  $<INSTALL_INTERFACE:include/ezV24>  # <prefix>/include/ezV24
 PRIVATE src
 )
 target_include_directories(ezV24_shared
-PUBLIC include/ezV24
+PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/ezV24>
+  $<INSTALL_INTERFACE:include/ezV24>  # <prefix>/include/ezV24
 PRIVATE src
 )
+
 
 if(WIN32)
   #set_target_properties(ezV24 PROPERTIES COMPILE_DEFINITIONS "__WIN32__=1")
@@ -54,7 +68,9 @@ endif()
 
 set_property(TARGET ezV24_shared PROPERTY SOVERSION ${ezV24_SOVERSION})
 
+
 ## -------------------------------------------------------------------
+## Installation of the general library stuff
 ##
 install(TARGETS ezV24_static ezV24_shared EXPORT ezV24_Targets
   LIBRARY DESTINATION lib
@@ -67,6 +83,46 @@ install(
     include/ezV24/ezV24.h
   DESTINATION
     include/ezV24/
+  COMPONENT
+    Devel
+)
+
+
+## -------------------------------------------------------------------
+## Generation and Installation of the CMake support stuff
+##
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+  ezV24/ezV24ConfigVersion.cmake
+  VERSION ${ezV24_VERSION}
+  COMPATIBILITY AnyNewerVersion
+)
+
+export(EXPORT ezV24_Targets
+  FILE ezV24/ezV24Targets.cmake
+  NAMESPACE ezV24::
+)
+configure_file(cmake/ezV24-config.cmake.in
+  ezV24/ezV24Config.cmake
+  @ONLY
+)
+
+set(ConfigPackageLocation lib/cmake/ezV24)
+install(EXPORT ezV24_Targets
+  FILE
+    ezV24Targets.cmake
+#    ${CMAKE_CURRENT_BINARY_DIR}/ezV24/ezV24Targets.cmake
+  NAMESPACE
+    ezV24::
+  DESTINATION
+    ${ConfigPackageLocation}
+)
+install(
+  FILES
+    ${CMAKE_CURRENT_BINARY_DIR}/ezV24/ezV24Config.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/ezV24/ezV24ConfigVersion.cmake
+  DESTINATION
+    ${ConfigPackageLocation}
   COMPONENT
     Devel
 )
