@@ -1,0 +1,14 @@
+get_filename_component(ezV24_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
+
+# flag required by CMakePackageConfigHelpers
+@PACKAGE_INIT@
+
+set(ezV24_INCLUDE_DIR "@CONFIG_INCLUDE_DIRS@")
+
+# include("${YAML_CPP_CMAKE_DIR}/yaml-cpp-targets.cmake")
+
+set(ezV24_LIBRARIES "@EXPORT_TARGETS@")
+
+#set_and_check(ezV24_INCLUDE_DIR @PACKAGE_ezV24_INCLUDE_INSTALL_DIR@/hal)
+#set_and_check(ezV24_LIBRARY   @PACKAGE_LIB_INSTALL_DIR@/@CMAKE_STATIC_LIBRARY_PREFIX@@PROJECT_NAME_LIB@@CMAKE_STATIC_LIBRARY_SUFFIX@)
+#set_and_check(ezV24_LIBRARIES @PACKAGE_LIB_INSTALL_DIR@/@CMAKE_STATIC_LIBRARY_PREFIX@@PROJECT_NAME_LIB@@CMAKE_STATIC_LIBRARY_SUFFIX@)
